feat: compile v0.3 suites once per invocation