@@ -1,6 +1,8 @@
 package com.specdriven.regression.contract.v03;
 
 import java.nio.file.Path;
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -12,12 +14,13 @@ public record V03CompiledSuite(
         V03EnvironmentProfile environmentProfile,
         Map<String, V03ResolvedTarget> targets,
         Map<String, Path> artifactRoots,
-        List<V03CompiledTestCase> tests) {
+        List<V03CompiledTestCase> tests,
+        String planDigest) {
 
     public V03CompiledSuite {
         suiteRoot = suiteRoot.toAbsolutePath().normalize();
-        targets = Map.copyOf(targets);
-        artifactRoots = Map.copyOf(artifactRoots);
+        targets = Collections.unmodifiableMap(new LinkedHashMap<>(targets));
+        artifactRoots = Collections.unmodifiableMap(new LinkedHashMap<>(artifactRoots));
         tests = List.copyOf(tests);
     }
 }
